// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - file_new tool call snapshot (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Create a new TypeScript file

⚙ Create src/newFile.ts
  └─ Created (1 lines, 30 bytes)
"
`;

exports[`ChatDisplay - file_new tool call snapshot (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Create a new TypeScript file

⚙ Create src/newFile.ts
  └─ Running ...
"
`;
